--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,146 @@
-.App {
-  text-align: center;
+
+
+.body{
+  animation: contentTransition 0.75s;
+
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+
+.form_input{
+  border: 1px solid lightskyblue;
+  padding: 6px 16px;
+  min-width: 200px;
+  max-width: 100vw;
+  font-size: 15px;
+  
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+
+.pType{
+  color: grey;
+}
+
+
+.form_submit{
+  
+  padding: 6px 16px;
+  font-size: 15px;
+  margin-left: 6px;
+  background-color: rgb(255, 255, 255);
+  border: 1px solid lightskyblue;
+  border-radius: 4px;
+  color:lightskyblue;
+  cursor: pointer;
+}
+
+
+.form_submit:hover{
+
+  padding: 6px 16px;
+  font-size: 15px;
+  margin-left: 6px;
+  background-color: lightskyblue;
+  border: 2px solid lightskyblue;
+  border-radius: 4px;
+  color:whitesmoke;
+  cursor: pointer;
+}
+
+
+*{
+  margin:0px ;
+  padding:0px; 
+  box-sizing:border-box;
+}
+
+
+.title{
+  color: mediumpurple;
+  padding: 3rem 0rem;
+}
+
+@media only screen and (max-width: 500px) {
+
+  .form_submit{
+    margin-top:5px;
+
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+
+/* Google Fonts */
+@import url(https://fonts.googleapis.com/css?family=Anonymous+Pro);
+
+/* Global */
+
+.line-1{
+    position: relative;
+    top: 50%;  
+    width: 24em;
+    margin: 0 auto;
+    border-right: 2px solid rgba(255,255,255,.75);
+    font-size: 15px;
+    text-align: center;
+    white-space: nowrap;
+    overflow: hidden;
+    transform: translateY(-50%);    
 }
 
-.App-link {
-  color: #61dafb;
+/* Animation */
+.anim-typewriter{
+  animation: typewriter 4s steps(44) 1s 1 normal both,
+             blinkTextCursor 2ms steps(44) infinite normal;
+}
+@keyframes typewriter{
+  from{width: 0;}
+  to{width: 16em;}
+}
+@keyframes blinkTextCursor{
+  from{border-right-color: rgba(255,255,255,.75);}
+  to{border-right-color: transparent;}
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+
+
+@keyframes contentTransition{
+
+    from{
+        opacity: 0;
+        transform: rotateX(-10deg);
+        transform: rotateY(-10deg);
+        
+    }
+
+    to{
+      opacity: 1;
+      transform: rotateX();
+      transform: rotateY(-10deg);
+
+    }
+
+}
+
+.recipy_main{
+  
+  animation: contentTransition 0.75s;
+}
+
+
+@media only screen
+and (min-device-width : 320px)
+and (max-device-width : 480px) {
+
+  .form_input{
+    width: 50%;
+    border: 1px solid lightskyblue;
+    padding: 6px 16px;
+    min-width: 200px;
+    max-width: 100vw;
+    font-size: 15px;
+    
   }
-  to {
-    transform: rotate(360deg);
-  }
+
+
+
+
 }
